# MachineLearningMathEx

./: README.md
Mathematics/: CMakeLists.txt  ExecuteDualLagrange  FindDistancePoint  MovingTileMath  SummingNSeries
Mathematics/Basic/MovingTiles/: MovingTileMath.cpp
Mathematics/DualLagrange/: ExecuteDualLagrange.cpp
Mathematics/FindThePoint/: FindDistancePoint.cpp
Mathematics/SummingTheNSeries/: SummingNSeries.cpp
